extract info list to json

--- a/src/signs/ui/search/Signs.css
+++ b/src/signs/ui/search/Signs.css
@@ -14,7 +14,7 @@
 }
 
 .CuneiformFont {
-  font-family: 'Assurbanipal', inherit;
+  font-family: 'Assurbanipal', monospace;
 }
 .SignName {
   font-style: normal;
