Tweak translation display

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -33,7 +33,8 @@
     list-style: none
     padding: 0
 
-  &__ControlLine
+  &__ControlLine,
+  &__TranslationLine
     color: darkgrey
 
   &__DollarAndAtLine,
