--- a/src/signs/ui/search/Signs.css
+++ b/src/signs/ui/search/Signs.css
@@ -10,6 +10,15 @@
 .MesZL--popover {
   min-width: 40%;
 }
+.MesZL--popover p {
+  margin-bottom: 0;
+  margin-top: 0.5em;
+}
+.MesZL--popover hr {
+  border-color: black;
+  border-style: solid;
+  border-width: 0 0 0.5px 0;
+}
 
 .SignName {
   font-style: normal;
@@ -24,7 +33,12 @@
 .Help__popover {
   min-width: 600px;
 }
-
+.Results--sign {
+  font-variant: all-small-caps;
+}
+.Results--cuneiform {
+  font-size: 150%;
+}
 .Results {
   max-width: 190px;
 }
