--- a/src/signs/ui/search/Signs.css
+++ b/src/signs/ui/search/Signs.css
@@ -19,7 +19,10 @@
   border-style: solid;
   border-width: 0 0 0.5px 0;
 }
-
+.HangingIndent {
+  padding-left: 44px;
+  text-indent: -44px;
+}
 .SignName {
   font-style: normal;
   text-transform: lowercase;
