remove important css

--- a/src/signs/ui/search/Signs.css
+++ b/src/signs/ui/search/Signs.css
@@ -11,7 +11,7 @@
   min-width: 40%;
 }
 .mesZL__popover pre {
-  font-family: Assurbanipal, Junicode, serif !important;
+  font-family: Assurbanipal, Junicode, serif;
 }
 .mesZL__popover p {
   margin-bottom: 0;
