Expanded sign view word as logograms (#119)

--- a/src/signs/ui/display/signDisplay.css
+++ b/src/signs/ui/display/signDisplay.css
@@ -1,3 +1,7 @@
+.signDisplay__LogogramInfo {
+  min-width: 25%;
+}
+
 .CuneiformFonts__heading-old-babylonian-monumental {
   font-family: 'Old-Babylonian (Monumental)', Junicode, serif;
 }
