Correct typo in font for Old Babylonian Cursive

--- a/src/signs/ui/display/signDisplay.css
+++ b/src/signs/ui/display/signDisplay.css
@@ -25,7 +25,7 @@
 @font-face {
   font-display: swap;
   font-family: 'Old-Babylonian Cursive';
-  src: url('fonts/SantakkuM.woff') format('woff');
+  src: url('fonts/Santakku.woff') format('woff');
 }
 
 @font-face {
