--- a/src/corpus/ui/TextView.sass
+++ b/src/corpus/ui/TextView.sass
@@ -1,7 +1,15 @@
 .text-view__introduction
-    .text-view__markdown
-        margin-left: 2rem
+  margin-bottom: 2rem
+
+  .text-view__markdown
+    margin-left: 2rem
 
 .text-view__references
-    margin-top: 5rem
-    margin-left: 2rem
+  margin-left: 2rem
+  margin-top: 5rem
+
+.text-view__reference-group
+  margin-bottom: .5em
+
+.text-view__reference-group-title
+  font-weight: bold
