--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Assurbanipal, Junicode;
+  font-family: Assurbanipal, Junicode, serif;
   font-size: initial;
   margin: 0;
   padding: 0;
