--- a/src/signs/ui/display/compositeSigns.css
+++ b/src/signs/ui/display/compositeSigns.css
@@ -2,6 +2,9 @@
   padding-left: 44px;
   text-indent: -44px;
 }
+.compositeSigns__compositeSigns__compositeSigns {
+  max-width: 70%;
+}
 
 .compositeSigns__help {
   bottom: 0;
