Update ident styles

--- a/src/corpus/ui/TextView.sass
+++ b/src/corpus/ui/TextView.sass
@@ -1,11 +1,11 @@
-.text-view__introduction
+.text-view__section
+  padding-left: 2rem
   margin-bottom: 2rem
 
-  .text-view__markdown
-    margin-left: 2rem
-
+.text-view__section-heading
+  text-indent: -2rem
+   
 .text-view__references
-  margin-left: 2rem
   margin-top: 5rem
 
 .text-view__reference-group
