--- a/src/corpus/ui/TextView.sass
+++ b/src/corpus/ui/TextView.sass
@@ -13,3 +13,16 @@
 
 .text-view__reference-group-title
   font-weight: bold
+
+.text-view__colophon-chapter
+  border-top: 1px solid black
+  margin-top: 1em
+  padding-top: 1em
+
+.text-view__colophon-chapter-heading
+  font-size: 1rem
+  font-weight: bold
+
+.text-view__colophon-siglum
+  font-size: 1rem
+  font-weight: normal
