Lazy load colophons

--- a/src/corpus/ui/TextView.sass
+++ b/src/corpus/ui/TextView.sass
@@ -4,7 +4,15 @@
 
 .text-view__section-heading
   text-indent: -2rem
-   
+
+  &--collapse
+    cursor: pointer
+
+.text-view__collapse-indicator
+  font-size: 1rem
+  text-indent: 0
+  
+
 .text-view__references
   margin-top: 5rem
 
