--- a/src/corpus/ui/TextView.sass
+++ b/src/corpus/ui/TextView.sass
@@ -1,11 +1,19 @@
-.text-view__introduction
+.text-view__section
+  padding-left: 2rem
   margin-bottom: 2rem
 
-  .text-view__markdown
-    margin-left: 2rem
+.text-view__section-heading
+  text-indent: -2rem
+
+  &--collapse
+    cursor: pointer
+
+.text-view__collapse-indicator
+  font-size: 1rem
+  text-indent: 0
+  
 
 .text-view__references
-  margin-left: 2rem
   margin-top: 5rem
 
 .text-view__reference-group
@@ -13,3 +21,16 @@
 
 .text-view__reference-group-title
   font-weight: bold
+
+.text-view__colophon-chapter
+  border-top: 1px solid black
+  margin-top: 1em
+  padding-top: 1em
+
+.text-view__colophon-chapter-heading
+  font-size: 1rem
+  font-weight: bold
+
+.text-view__colophon-siglum
+  font-size: 1rem
+  font-weight: normal
