Show uncertain fragments in list of manuscripts

--- a/src/corpus/ui/Chapters.sass
+++ b/src/corpus/ui/Chapters.sass
@@ -16,7 +16,8 @@
         padding-right: 1em
         vertical-align: top
 
-    &__references
+    &__references,
+    &__uncertain-fragments
         list-style-position: inside
         margin-bottom: 1em
         padding-left: 0.1em
