--- a/src/corpus/ui/Chapters.sass
+++ b/src/corpus/ui/Chapters.sass
@@ -16,6 +16,9 @@
         padding-right: 1em
         vertical-align: top
 
+    &__extant-lines
+        vertical-align: top
+
     &__references,
     &__uncertain-fragments
         list-style-position: inside
