--- a/src/corpus/ui/Chapters.sass
+++ b/src/corpus/ui/Chapters.sass
@@ -24,3 +24,6 @@
         list-style-position: inside
         margin-bottom: 1em
         padding-left: 0.1em
+
+    &__help
+        margin-left: 0.5rem
