--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,20 @@ body {
 
 @font-face {
   font-display: swap;
-  font-family: 'Junicode';
+  font-family: Junicode;
   src: url('Junicode.woff') format('woff');
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'Junicode';
+  font-family: Junicode;
   font-weight: bold;
   src: url('Junicode-Bold.woff') format('woff');
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'Junicode';
+  font-family: Junicode;
   font-style: italic;
   font-weight: bold;
   src: url('Junicode-BoldItalic.woff') format('woff');
@@ -28,14 +28,14 @@ body {
 
 @font-face {
   font-display: swap;
-  font-family: 'Junicode';
+  font-family: Junicode;
   font-style: italic;
   src: url('Junicode-Italic.woff') format('woff');
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'Assurbanipal';
+  font-family: Assurbanipal;
   font-style: normal;
   font-weight: normal;
   src: url('Assurbanipal.woff') format('woff'),
