Preliminary manuscripts display

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -6,11 +6,11 @@
 
         & ~ &
             padding-left: 2em
-            
+
     &__intertext
         color: #808080
         font-size: 80%
-        padding: 1em 0 
+        padding: 1em 0
 
     &__line
         &--is-second-line-of-parallelism
@@ -20,3 +20,16 @@
         &--is-beginning-of-section
             td
                 padding-top: 1em
+
+    &__manuscripts
+        margin-left: 1em
+        margin-top: 0.5em
+
+    &__manuscripts-siglum
+        font-size: 80%
+        padding-right: 0.5em
+        text-align: left
+
+    &__manuscripts-labels
+        font-size: 80%
+        text-align: left
