Show and hide manuscripts

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -21,6 +21,10 @@
             td
                 padding-top: 1em
 
+        &__line-toggle
+            width: 1em
+            cursor: pointer
+
     &__manuscripts
         margin-left: 1em
         margin-top: 0.5em
