Show dollar lines

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -37,3 +37,8 @@
     &__manuscripts-labels
         font-size: 80%
         text-align: left
+
+    &__manuscripts-paratext
+        font-family: sans-serif
+        font-size: 80%
+        padding-left: 1em
