--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -29,16 +29,20 @@
         margin-left: 1em
         margin-top: 0.5em
 
-    &__manuscripts-siglum
+    &__manuscript
+        &--standard
+            font-weight: bolder
+
+    &__manuscript-siglum
         font-size: 80%
         padding-right: 0.5em
         text-align: left
 
-    &__manuscripts-labels
+    &__manuscript-labels
         font-size: 80%
         text-align: left
 
-    &__manuscripts-paratext
+    &__manuscript-paratext
         font-family: sans-serif
         font-size: 80%
         padding-left: 1em
