--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -11,6 +11,7 @@
         color: #808080
         font-size: 80%
         padding: 1em 0
+        text-align: center
 
     &__line
         &--is-second-line-of-parallelism
