--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -47,3 +47,11 @@
         font-family: sans-serif
         font-size: 80%
         padding-left: 1em
+
+    &__manuscript-info-toggle
+        cursor: pointer
+
+    &__manuscript-notes
+        list-style: none
+        margin: 0
+        padding: 0
