Fix toggle pointer

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -22,9 +22,9 @@
             td
                 padding-top: 1em
 
-        &__line-toggle
-            width: 1em
-            cursor: pointer
+    &__manuscripts-toggle
+        width: 1em
+        cursor: pointer
 
     &__manuscripts
         margin-left: 1em
