--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -6,11 +6,12 @@
 
         & ~ &
             padding-left: 2em
-            
+
     &__intertext
         color: #808080
         font-size: 80%
-        padding: 1em 0 
+        padding: 1em 0
+        text-align: center
 
     &__line
         &--is-second-line-of-parallelism
@@ -20,3 +21,37 @@
         &--is-beginning-of-section
             td
                 padding-top: 1em
+
+    &__manuscripts-toggle
+        width: 1em
+        cursor: pointer
+
+    &__manuscripts
+        margin-left: 1em
+        margin-top: 0.5em
+
+    &__manuscript
+        &--standard
+            font-weight: bolder
+
+    &__manuscript-siglum
+        font-size: 80%
+        padding-right: 0.5em
+        text-align: left
+
+    &__manuscript-labels
+        font-size: 80%
+        text-align: left
+
+    &__manuscript-paratext
+        font-family: sans-serif
+        font-size: 80%
+        padding-left: 1em
+
+    &__manuscript-info-toggle
+        cursor: pointer
+
+    &__manuscript-notes
+        list-style: none
+        margin: 0
+        padding: 0
