Small format changes to manuscript viewer

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -44,8 +44,8 @@
         text-align: left
 
     &__manuscript-paratext
-        font-family: sans-serif
         font-size: 80%
+        color: #808080
         padding-left: 1em
 
     &__manuscript-info-toggle
@@ -53,5 +53,6 @@
 
     &__manuscript-notes
         list-style: none
+        font-size: 80%
         margin: 0
         padding: 0
