Make Buttons Blue

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -24,6 +24,7 @@
 
     &__manuscripts-toggle
         width: 1em
+        color: #007bff
         cursor: pointer
 
     &__manuscripts
@@ -50,6 +51,7 @@
 
     &__manuscript-info-toggle
         cursor: pointer
+        color: #007bff
 
     &__manuscript-notes
         list-style: none
