Add margin bottom to manuscripts

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -30,6 +30,7 @@
     &__manuscripts
         margin-left: 1em
         margin-top: 0.5em
+        margin-bottom: 1.5em
 
     &__manuscript
         &--standard
