Use flexbox for main content header

--- a/src/common/AppContent.sass
+++ b/src/common/AppContent.sass
@@ -12,8 +12,19 @@
     max-width: initial
 
   &__header
+    display: flex
+    flex-flow: wrap
     margin-bottom: 1em
  
+  &__breadcrumbs
+    flex: 0 0 100%
+
+  &__heading
+    flex: auto
+
+  &__toolbar
+    align-content: flex-start
+
   &__content
     flex: auto
 
