Add settings to sidebar

--- a/src/common/AppContent.sass
+++ b/src/common/AppContent.sass
@@ -32,8 +32,8 @@
     border-radius: 0.25rem
     background: #417DD2
     color: #FFFFFF
-    flex: auto
+    flex: 1 0 content
     margin-left: 1em
-    padding: 0.5em
+    padding: 1em
     
     
