Add background image to sidebar

--- a/src/common/AppContent.sass
+++ b/src/common/AppContent.sass
@@ -31,9 +31,12 @@
   &__sidebar
     border-radius: 0.25rem
     background: #417DD2
+    background-blend-mode: lighten
+    background-image: url(https://www.ebl.lmu.de/api/images/Babel_Project_01_cropped.svg)
+    background-position: right -12em  bottom
+    background-repeat: no-repeat
+    background-size: 20em
     color: #FFFFFF
     flex: 1 0 content
     margin-left: 1em
-    padding: 1em
-    
-    
+    padding: 1em 1em 23em 1em
