Make sidebar sticky

--- a/src/common/AppContent.sass
+++ b/src/common/AppContent.sass
@@ -39,4 +39,7 @@
     color: #FFFFFF
     flex: 1 0 content
     margin-left: 1em
+    max-height: 100vh
     padding: 1em 1em 23em 1em
+    position: sticky
+    top: 0
