Modifications to Intro Display

--- a/src/corpus/ui/TextView.sass
+++ b/src/corpus/ui/TextView.sass
@@ -6,7 +6,7 @@
   text-indent: -2rem
 
 .text-view__references
-  margin-top: 5rem
+  margin-top: .5rem
 
 .text-view__reference-group
   margin-bottom: .5em
@@ -26,3 +26,7 @@
 .text-view__colophon-siglum
   font-size: 1rem
   font-weight: normal
+
+.text-view__markdown
+  text-align: justify
+  padding-right: 3em
