Lower case names for CSS classes

--- a/src/fragmentarium/ui/fragment/Notes.css
+++ b/src/fragmentarium/ui/fragment/Notes.css
@@ -1,10 +1,10 @@
-.Notes__header {
+.notes__header {
   text-align: center;
   margin-bottom: 0;
   font-weight: bold;
 }
 
-.Notes__notes {
+.notes__notes {
   margin: 0.5em 2em;
   padding: 0.5em;
   font-size: 90%;
