Add notes toggle to sidebar

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -21,9 +21,11 @@
         &--is-beginning-of-section
             td
                 padding-top: 1em
+        
+        vertical-align: top
 
-    &__manuscripts-toggle
-        width: 1em
+    &__toggle
+        width: 1.5em
         color: #007bff
         cursor: pointer
 
