Show line notes

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -27,7 +27,8 @@
         color: #007bff
         cursor: pointer
 
-    &__manuscripts
+    &__manuscripts,
+    &__note
         margin-left: 1em
         margin-top: 0.5em
         margin-bottom: 1.5em
