Display Scholia: Notes (#218)
* Add note to LineDisplay

* Show line notes

* Add note state to RowsContext

* Add notes toggle to sidebar

* Split memo

* Extract component

* Extract methods

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -21,13 +21,16 @@
         &--is-beginning-of-section
             td
                 padding-top: 1em
+        
+        vertical-align: top
 
-    &__manuscripts-toggle
-        width: 1em
+    &__toggle
+        width: 1.5em
         color: #007bff
         cursor: pointer
 
-    &__manuscripts
+    &__manuscripts,
+    &__note
         margin-left: 1em
         margin-top: 0.5em
         margin-bottom: 1.5em
