Change style of note to reconstruction

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -29,11 +29,15 @@
         color: #007bff
         cursor: pointer
 
-    &__manuscripts,
-    &__note
+    &__manuscripts
         margin-left: 1em
         margin-top: 0.5em
         margin-bottom: 1.5em
+
+    &__note
+        font-size: 90%
+        margin: 0.5em 2em 1em
+        text-align: justify%
 
     &__manuscript
         &--standard
