--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -37,7 +37,7 @@
     &__note
         font-size: 90%
         margin: 0.5em 2em 1em
-        text-align: justify%
+        text-align: justify
 
     &__manuscript
         &--standard
