--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -39,6 +39,12 @@
         margin: 0.5em 2em 1em
         text-align: justify
 
+    &__parallels
+        color: #808080
+        list-style: none
+        margin: 0.5em 2em 1em
+        padding: 0
+
     &__manuscript
         &--standard
             font-weight: bolder
