--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -7,6 +7,9 @@
         & ~ &
             padding-left: 2em
 
+    &__anchor
+        color: inherit
+
     &__intertext
         color: #808080
         font-size: 80%
