Add models for parallel lines

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -34,7 +34,10 @@
     padding: 0
 
   &__ControlLine,
-  &__TranslationLine
+  &__TranslationLine,
+  &__ParallelFragment,
+  &__ParallelComposition,
+  &__ParallelText
     color: darkgrey
 
   &__DollarAndAtLine,
