Make Line Number smaller and nowrap in Chapter view

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -3,6 +3,9 @@
 
     &__line-number
         padding-right: 1em
+        font-size: 70%
+        white-space: nowrap
+        vertical-align: middle
 
         & ~ &
             padding-left: 2em
