Display Scholia: Parallels (#221)
* Add parallels to row state

* Add preliminary parallels display

* Add ids to chapter lines

* Add ids to fragment lines

* Scroll chapter view to line

* Scroll fragment line to view

* Update chapter scrolling

* Add better anchors to fragment

* Add better anchors to chapter

* Add models for parallel lines

* Add components for parallel lines

* Extract component for td

* Extract component for prefix

* Rename parallel line components

* Extract components for parallel display

* Move Score to new file

* Extract Parallels to new file

* Remove duplicate code

* Use parallel line display in cahpter view

* Add links to parallels

* Use ATF in links

* Rename file

* Add tests for line-number

* Add test for parallel line models

* Add test for parallel line display

* Add more test cases

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -9,6 +9,9 @@
         & ~ &
             padding-left: 2em
 
+    &__anchor
+        color: inherit
+
     &__intertext
         color: #808080
         font-size: 80%
@@ -40,6 +43,12 @@
         font-size: 90%
         margin: 0.5em 2em 1em
         text-align: justify
+
+    &__parallels
+        color: #808080
+        list-style: none
+        margin: 0.5em 2em 1em
+        padding: 0
 
     &__manuscript
         &--standard
