--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -34,7 +34,10 @@
     padding: 0
 
   &__ControlLine,
-  &__TranslationLine
+  &__TranslationLine,
+  &__ParallelFragment,
+  &__ParallelComposition,
+  &__ParallelText
     color: darkgrey
 
   &__DollarAndAtLine,
@@ -155,3 +158,6 @@
     font-size: 0.8em
     padding: 0.1em
     vertical-align: super
+
+  &__anchor
+    color: inherit
