--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -46,6 +46,7 @@
 
     &__parallels
         color: #808080
+        font-size: 90%
         list-style: none
         margin: 0.5em 2em 1em
         padding: 0
