--- a/src/transliteration/ui/WordInfo.sass
+++ b/src/transliteration/ui/WordInfo.sass
@@ -1,10 +1,12 @@
+@import src/fonts
+    
 .word-info
     &__header
-        font-family: Assurbanipal, Junicode, serif
+        @include ebl-font
         font-weight: bold
     
     &__words
-        font-family: Assurbanipal, Junicode, serif
+        @include ebl-font
         list-style: none
         margin: 0
         padding: 0
