--- a/src/corpus/ui/Chapters.sass
+++ b/src/corpus/ui/Chapters.sass
@@ -16,7 +16,8 @@
         padding-right: 1em
         vertical-align: top
 
-    &__extant-lines
+    &__extant-lines,
+    &__museum-numbers
         vertical-align: top
 
     &__references,
