--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -9,6 +9,9 @@
         & ~ &
             padding-left: 2em
 
+    &__line-number
+        text-align: right
+
     &__anchor
         color: inherit
 
