Add distance to br in introduction to texts in Corpus

--- a/src/corpus/ui/TextView.sass
+++ b/src/corpus/ui/TextView.sass
@@ -30,3 +30,8 @@
 .text-view__markdown
   text-align: justify
   padding-right: 3em
+  br
+    display: block
+    content: ''
+    margin-top: 10px
+
