--- a/src/corpus/ui/ManuscriptPopover.sass
+++ b/src/corpus/ui/ManuscriptPopover.sass
@@ -5,5 +5,7 @@
         @include ebl-font
     &__header
         font-weight: bold
+    &__body p
+        margin-bottom: .5rem
     &__provenance
         font-variant: small-caps
