optimizations and re-arrange display of information

--- a/src/transliteration/ui/WordInfo.sass
+++ b/src/transliteration/ui/WordInfo.sass
@@ -19,3 +19,9 @@
 
     &__variant-alignment-indicator
         font-style: normal
+    
+    &__variant-heading
+        padding-top: 1em
+
+.aligned-token-table
+    margin-top: 1em
