display with indented token rows

--- a/src/transliteration/ui/WordInfo.sass
+++ b/src/transliteration/ui/WordInfo.sass
@@ -21,7 +21,10 @@
         font-style: normal
     
     &__variant-heading
-        padding-top: 1em
+        padding-top: .5em
+    
+    &__variant-token
+        padding-left: 1em
 
-.aligned-token-table
-    margin-top: 1em
+.aligned-tokens
+    margin-top: .5em
