arrange aligned tokens in popover

--- a/src/transliteration/ui/WordInfo.sass
+++ b/src/transliteration/ui/WordInfo.sass
@@ -19,3 +19,16 @@
 
     &__variant-alignment-indicator
         font-style: normal
+    
+    &__aligned-tokens
+        padding: .5em 0 0
+
+        .col
+            padding-left: 0
+            padding-right: 0
+
+    &__variant-heading
+        padding: .5em 0 0 .5em !important
+    
+    &__sigla .col
+        padding-right: .5em
