--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -133,6 +133,9 @@
 
     color: red
 
+    &.hidden, &.hidden + .Transliteration__wordSeparator
+      display: none
+
   &__BrokenAway,
   &__PerhapsBrokenAway,
   &__AccidentalOmission,
