add button to toggle oldLineNumbers

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -12,6 +12,12 @@
     &__line-number
         text-align: right
 
+        &.left-align
+            text-align: left
+
+    &__old-line-numbers.hidden
+        display: none
+
     &__anchor
         color: inherit
 
