Hide metrical analysis (#273)
* add sentenceIndex property to BaseToken

* fix type readonly Token[]

* remove unnecessary check

* add condition to filter out undefined reconstruction

* remove extra reconstruction check

* add Meter to RowsContext

* add Meter Switch

* add Break type guard

* add Meter CSS

* relocate showMeter to ChapterViewLineVariant component

* add Meter button snapshot

* merge TextSettings and ScholiaSettings components

* setSentenceIndices function is only applied to line variants

* perform setSentenceIndices inline

* keep spacing of caesura when hidden

* update snapshots

* update snapshots

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -133,6 +133,15 @@
 
     color: red
 
+  &__MetricalFootSeparator.hidden
+      display: none
+
+  &__Caesura.hidden
+      visibility: hidden
+
+      & + .Transliteration__wordSeparator
+        display: none
+
   &__BrokenAway,
   &__PerhapsBrokenAway,
   &__AccidentalOmission,
