add  to aligned token in popover

--- a/src/transliteration/ui/WordInfo.sass
+++ b/src/transliteration/ui/WordInfo.sass
@@ -30,6 +30,9 @@
             .col, .col-auto
                 padding: 0
 
+    &__aligned-word
+        white-space: nowrap
+
     &__variant--heading
         padding: .5em 0 0 .5em
     
