--- a/src/transliteration/ui/WordInfo.sass
+++ b/src/transliteration/ui/WordInfo.sass
@@ -33,8 +33,15 @@
     &__aligned-word
         white-space: nowrap
 
-    &__variant--heading
-        padding: .5em 0 0 .5em
-    
+    &__variant
+        &--heading
+            padding: .5em 0 0 .5em
+
+        &--guideword
+            float: left
+
+            > span
+                font-style: italic
+
     &__sigla
         padding-left: .5em !important
