--- a/src/transliteration/ui/WordInfo.sass
+++ b/src/transliteration/ui/WordInfo.sass
@@ -30,8 +30,18 @@
             .col, .col-auto
                 padding: 0
 
-    &__variant--heading
-        padding: .5em 0 0 .5em
-    
+    &__aligned-word
+        white-space: nowrap
+
+    &__variant
+        &--heading
+            padding: .5em 0 0 .5em
+
+        &--guideword
+            float: left
+
+            > span
+                font-style: italic
+
     &__sigla
         padding-left: .5em !important
