Modify display of Arabic words

--- a/src/dictionary/ui/display/wordInformationDisplay.sass
+++ b/src/dictionary/ui/display/wordInformationDisplay.sass
@@ -4,6 +4,10 @@
 .copyIcon
   padding: 3px 5px 0
 
+.arabicGuideWord
+  text-indent: 2em
+  font-size: 70%
+
 .supplementsAkkadianDictionaries
   text-indent: 15px
   margin-left: 5em
