add some margin between lines

--- a/src/dictionary/ui/search/LinesWithLemma.sass
+++ b/src/dictionary/ui/search/LinesWithLemma.sass
@@ -4,9 +4,12 @@
 
     &__textname
         font-style: italic
-    
+
     &__line
         list-style: none
+
+    &__line
+        margin-bottom: 1rem
 
     &__tokens
         margin-left: 3rem
