re-arrange lines

--- a/src/dictionary/ui/search/LinesWithLemma.sass
+++ b/src/dictionary/ui/search/LinesWithLemma.sass
@@ -2,6 +2,9 @@
     &__tab
         margin-top: 1.5rem
 
+    &__header
+        padding-top: 0.5rem
+
     &__textname
         font-style: italic
 
