force span to show whitespace, word seperator

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -91,7 +91,8 @@
     & + & .Transliteration__glossJoiner
       display: inline
 
-  &__wordSeparator,
+  &__wordSeparator
+    white-space: pre
   &__Word,
   &__Divider
     @include emesal
