add stage, Markdown, refactoring

--- a/src/dictionary/ui/search/LinesWithLemma.sass
+++ b/src/dictionary/ui/search/LinesWithLemma.sass
@@ -2,13 +2,20 @@
     &__tab
         margin-top: 1.5rem
 
-    &__header
-        padding-top: 0.5rem
-
     &__textname
         font-style: italic
 
     &__tokens
         margin-left: 3rem
+
+    &__header
+        font-weight: normal
+        font-size: 1.2rem
+
+    &__genre
+        padding-top: 1rem
+        font-weight: normal
+        font-size: 1.5rem
+    
 td .Transliteration__AkkadianWord--highlight
     background-color: lightgrey
