add manuscript line highlighting

--- a/src/dictionary/ui/search/LinesWithLemma.sass
+++ b/src/dictionary/ui/search/LinesWithLemma.sass
@@ -14,17 +14,17 @@
         padding-top: 1rem
         font-weight: normal
         font-size: 1.5rem
-    
+
     &__textline > td
         padding-top: 0.5rem
-    
+
     &__translation > td
         padding: 0.5rem 0 1rem
-    
+
     &__manuscript-line > td:first-child
         padding-right: 1rem
         font-size: small
 
-    
-td .Transliteration__AkkadianWord--highlight
-    background-color: lightgrey
+td
+    .Transliteration__AkkadianWord--highlight, .Transliteration__Word--highlight
+        background-color: lightgrey
