--- a/src/dictionary/ui/search/LinesWithLemma.sass
+++ b/src/dictionary/ui/search/LinesWithLemma.sass
@@ -15,14 +15,26 @@
         font-weight: normal
         font-size: 1.5rem
 
-    &__textline > td
-        padding-top: 0.5rem
+    &__textline 
+        > td
+            padding-top: 0.5rem
+
+        &--reconstruction > td
+            padding-bottom: 1rem
+    
+    &__line-number
+        float: right
+        padding-right: .5rem
+        &--variant
+            padding-left: 1rem
+
 
     &__translation > td
         padding: 0.5rem 0 1rem
 
     &__manuscript-line > td:first-child
-        padding-right: 1rem
+        padding-right: .5rem
+        padding-left: 1rem
         font-size: small
 
 td
