arrange lines, add styling

--- a/src/dictionary/ui/search/LinesWithLemma.sass
+++ b/src/dictionary/ui/search/LinesWithLemma.sass
@@ -23,7 +23,7 @@
             padding-bottom: 1rem
     
     &__line-number
-        float: right
+        text-align: right
         padding-right: .5rem
         &--variant
             padding-left: 1rem
