--- a/src/fragmentarium/ui/image-annotation/annotation-tool/editor.css
+++ b/src/fragmentarium/ui/image-annotation/annotation-tool/editor.css
@@ -1,3 +1,4 @@
+/* stylelint-disable property-no-vendor-prefix */
 input[type='range'][orient='vertical'] {
   writing-mode: bt-lr; /* IE */
   -webkit-appearance: slider-vertical; /* Chromium */
@@ -5,3 +6,4 @@ input[type='range'][orient='vertical'] {
   height: 175px;
   padding: 0 5px;
 }
+/* stylelint-enable property-no-vendor-prefix */
