--- a/src/common/BrinkmanKings.sass
+++ b/src/common/BrinkmanKings.sass
@@ -1,2 +1,8 @@
-td.chronology-display 
+td.chronology-display
     vertical-align: middle
+
+    &__section
+        padding-bottom: 0px
+        
+tr:not(:first-child) td.chronology-display__section
+    padding-top: 30px
