About > Signs and Changes to Brinkman

--- a/src/about/ui/about.sass
+++ b/src/about/ui/about.sass
@@ -1,6 +1,22 @@
 .tab-pane
     padding-top: 30px
 
-.Introduction__chart
-    border-radius: 50%
-    
+.tab-content
+    text-align: justify
+    padding: 0em 4em
+
+.meszlColoredChanges
+    color: #00610F
+
+.Introduction
+  &__meszl
+    float: left
+    width: 300px
+    height: auto
+    padding: 1em 1em 1em 0em
+
+  &__fossey
+    float: right
+    width: 300px
+    height: auto
+    padding: 1em 0em 1em 1em
