--- a/src/about/ui/about.sass
+++ b/src/about/ui/about.sass
@@ -9,6 +9,27 @@
     color: #00610F
 
 .Introduction
+
+  &__cite
+    border: 1px solid black
+    display: block
+    margin: 10px auto
+    width: 70%
+    padding: 10px
+    text-align: center
+
+  &__creativecommons
+    border-width: 0
+    margin: auto
+    display: block
+    padding: 10px
+  
+  &__fragmentstorevise
+    float: right
+    width: 250px
+    height: auto
+    padding: 1em 1em 1em 0em
+
   &__meszl
     float: left
     width: 300px
