Fragmentarium section almost complete

--- a/src/about/ui/about.sass
+++ b/src/about/ui/about.sass
@@ -8,6 +8,9 @@
 .meszlColoredChanges
     color: #00610F
 
+h4
+  padding-top: 10px
+
 .Introduction
 
   &__cite
@@ -23,18 +26,41 @@
     margin: auto
     display: block
     padding: 10px
-  
-  &__fragmentstorevise
-    float: right
+
+  &__200px
+    width: 200px
+    height: auto
+
+  &__250px
     width: 250px
     height: auto
-    padding: 1em 1em 1em 0em
 
-  &__meszl
-    float: left
+  &__300px
     width: 300px
     height: auto
-    padding: 1em 1em 1em 0em
+    
+  &__350px
+    width: 350px
+    height: auto
+    
+  &__400px
+    width: 400px
+    height: auto
+  
+  &__photoLeft
+    text-align: center
+    float: left
+    margin: 0em 0.5em 0em 0em
+
+  &__photoRight
+    text-align: center
+    float: right
+    margin: 0em 0em 0.5em 0.5em
+
+  &__caption
+    font-size: 80%
+    padding-top: 0.5em
+    text-align: center
 
   &__fossey
     float: right
