Update display of CC badge

--- a/src/about/ui/about.sass
+++ b/src/about/ui/about.sass
@@ -27,6 +27,9 @@ h4
     display: block
     padding: 10px
 
+  &__creativeCommonsLicense
+    text-align: center
+    
   &__200px
     width: 200px
     height: auto
