Dictionary almost finished

--- a/src/about/ui/about.sass
+++ b/src/about/ui/about.sass
@@ -8,6 +8,9 @@
 .meszlColoredChanges
     color: #00610F
 
+h3
+  padding-top: 10px
+
 h4
   padding-top: 10px
 
@@ -29,7 +32,7 @@ h4
 
   &__creativeCommonsLicense
     text-align: center
-    
+
   &__200px
     width: 200px
     height: auto
