--- a/src/about/ui/about.sass
+++ b/src/about/ui/about.sass
@@ -19,23 +19,6 @@ blockquote
   
 .Introduction
 
-  &__cite
-    border: 1px solid black
-    display: block
-    margin: 10px auto
-    width: 70%
-    padding: 10px
-    text-align: center
-
-  &__creativecommons
-    border-width: 0
-    margin: auto
-    display: block
-    padding: 10px
-
-  &__creativeCommonsLicense
-    text-align: center
-
   &__200px
     width: 200px
     height: auto
@@ -55,7 +38,39 @@ blockquote
   &__400px
     width: 400px
     height: auto
+    
+  &__450px
+    width: 450px
+    height: auto
+    
+  &__caption
+    font-size: 80%
+    padding-top: 0.5em
+    text-align: center
+
+  &__cite
+    border: 1px solid black
+    display: block
+    margin: 10px auto
+    width: 70%
+    padding: 10px
+    text-align: center
+
+  &__creativecommons
+    border-width: 0
+    margin: auto
+    display: block
+    padding: 10px
+
+  &__creativeCommonsLicense
+    text-align: center
   
+  &__fossey
+    float: right
+    width: 300px
+    height: auto
+    padding: 1em 0em 1em 1em
+
   &__photoLeft
     text-align: center
     float: left
@@ -66,13 +81,10 @@ blockquote
     float: right
     margin: 0em 0em 0.5em 0.5em
 
-  &__caption
-    font-size: 80%
-    padding-top: 0.5em
-    text-align: center
+  &__quotation
+    display: block
+    padding: 0 0 1em 1em
 
-  &__fossey
-    float: right
-    width: 300px
-    height: auto
-    padding: 1em 0em 1em 1em
+  &__secondLineOfParallelism
+    padding-left: 1em
+
