Refactor and Reformat

--- a/src/about/ui/about.sass
+++ b/src/about/ui/about.sass
@@ -5,8 +5,8 @@
     text-align: justify
     padding: 0em 4em
 
-.meszlColoredChanges
-    color: #00610F
+.type-abbreviation
+  display: none
 
 h3
   padding-top: 10px
@@ -42,7 +42,7 @@ blockquote
   &__450px
     width: 450px
     height: auto
-    
+
   &__caption
     font-size: 80%
     padding-top: 0.5em
@@ -70,6 +70,9 @@ blockquote
     width: 300px
     height: auto
     padding: 1em 0em 1em 1em
+
+  &__meszlColoredChanges
+    color: #00610F
 
   &__photoLeft
     text-align: center
