--- a/src/about/ui/about.sass
+++ b/src/about/ui/about.sass
@@ -74,6 +74,9 @@ blockquote
   &__meszlColoredChanges
     color: #00610F
 
+  &__photoCentered
+    text-align: center
+
   &__photoLeft
     text-align: center
     float: left
