--- a/src/Introduction.css
+++ b/src/Introduction.css
@@ -10,11 +10,13 @@
 }
 
 .LMUIcon__image {
+  text-align: right;
   width: 200px;
   padding-right: 1em;
 }
 
 .HumboldtIcon__image {
+  text-align: left;
   width: 200px;
   padding-bottom: 1em;
 }
