--- a/src/about/ui/about.sass
+++ b/src/about/ui/about.sass
@@ -1,23 +1,23 @@
-.tab-pane
+[id^="about-tabpane-"].tab-pane
     padding-top: 30px
 
-.tab-content
+.tab-content:has([id^="about-tabpane-"])
     text-align: justify
     padding: 0em 4em
 
-.type-abbreviation
+[id^="about-tabpane-"] .type-abbreviation
   display: none
 
-h3
+[id^="about-tabpane-"] h3
   padding-top: 10px
 
-h4
+[id^="about-tabpane-"] h4
   padding-top: 10px
 
-blockquote
+[id^="about-tabpane-"] blockquote
   padding-left: 40%
   
-.Introduction
+[id^="about-tabpane-"] .Introduction
 
   &__200px
     width: 200px
