Align the Script edit button

--- a/src/fragmentarium/ui/info/ScriptSelection.sass
+++ b/src/fragmentarium/ui/info/ScriptSelection.sass
@@ -2,6 +2,7 @@
     &__button-wrapper
         display: flex
         align-items: flex-start
+        justify-content: space-between
 
         button
             margin-left: .5em
