--- a/src/dictionary/ui/display/wordInformationDisplay.sass
+++ b/src/dictionary/ui/display/wordInformationDisplay.sass
@@ -1,9 +1,6 @@
 .pointer__hover:hover
   cursor: pointer
 
-.copyIcon
-  padding: 3px 5px 0
-
 .arabicGuideWord
   text-indent: 2em
   font-size: 70%
@@ -25,3 +22,7 @@
 
 .fragmentlines-column
   padding-bottom: 1em
+
+.ipa-display
+  color: gray
+  font-size: 1.5rem
