--- a/src/_fonts.sass
+++ b/src/_fonts.sass
@@ -4,7 +4,7 @@
 @font-face
   font-display: swap
   font-family: Junicode
-  src: url('Junicode.woff') format('woff')
+  src: url('JunicodeTwoBetaVF-Roman.woff2') format('woff')
 
 @font-face
   font-display: swap
