--- a/src/fragmentarium/ui/info/OrganizationLinks.css
+++ b/src/fragmentarium/ui/info/OrganizationLinks.css
@@ -2,8 +2,14 @@
   text-align: center;
 }
 
+.OrganizationLinks a {
+  display: block;
+}
+
 .OrganizationLinks__image {
   border: solid 1px black;
-  height: 3.5em;
+  height: auto;
+  max-height: 3.5em;
+  max-width: 100%;
   margin: 0.2em;
 }
