--- a/src/fragmentarium/ui/fragment/CuneiformFragment.sass
+++ b/src/fragmentarium/ui/fragment/CuneiformFragment.sass
@@ -9,7 +9,7 @@
     section
       padding-bottom: 1rem
   
-  &__introduction
+  &__markup-section
     text-align: justify
 
     .type-abbreviation
