Update & fix meter

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -130,7 +130,7 @@
     @include normal-font
 
     color: red
-    top: 20px
+    top: 1.6em
     position: relative
 
   &__MetricalFootSeparator.hidden
