--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -63,8 +63,6 @@
   &__Joiner,
   &__AkkadianWord
     @include commentary-protocols
-    display: inline-grid
-    grid-template-rows: 1fr
     font-style: italic
     font-variant: normal
 
@@ -72,14 +70,6 @@
     .Transliteration__Word--SUMERIAN &,
     .Transliteration__Word--EMESAL &
       @include normal-font
-
-    .meter-display
-      @include normal-font
-      color: red
-
-    .ipa-display
-      @include normal-font
-      color: deepskyblue
 
   &__bracket,
   &__flag,
@@ -181,3 +171,19 @@
 
   &__inAlignSet
     background-color: lightgrey
+
+.chapter-display__line
+  .Transliteration
+    &__Reading,
+    &__UnidentifiedSign,
+    &__Joiner,
+    &__AkkadianWord
+      display: inline-grid
+      grid-template-rows: 1fr
+      .meter-display
+        @include normal-font
+        color: red
+
+      .ipa-display
+        @include normal-font
+        color: deepskyblue
