Add ProjectList to fragment display

--- a/src/fragmentarium/ui/fragment/CuneiformFragment.sass
+++ b/src/fragmentarium/ui/fragment/CuneiformFragment.sass
@@ -8,9 +8,12 @@
 
     section
       padding-bottom: 1rem
-  
+
   &__markup-section
     text-align: justify
 
     .type-abbreviation
       display: none
+
+  &__info section
+    margin-bottom: 1rem
