center and enlarge project img

--- a/src/corpus/ui/TextView.sass
+++ b/src/corpus/ui/TextView.sass
@@ -35,3 +35,10 @@
     content: ''
     margin-top: 10px
 
+.text-view__projects
+  display: flex
+  align-items: flex-start
+  justify-content: center
+
+  .OrganizationLinks__image
+    max-height: 5em
