Hide reference type in transliteration, footnotes

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -40,6 +40,10 @@
   &__ParallelText
     color: darkgrey
 
+  .reference-popover__citation
+    .type-abbreviation
+      display: none
+
   &__DollarAndAtLine,
   &__DollarAndAtLineWithParenthesis
     color: darkgrey
