--- a/src/signs/ui/display/SignImages.css
+++ b/src/signs/ui/display/SignImages.css
@@ -3,6 +3,7 @@
   max-height: 100px;
 }
 
-.mesopotamian-date-display {
+.figure-caption .mesopotamian-date-display {
+  color: black;
   font-size: 90%;
 }
