Hide reference type in Chapter view

--- a/src/corpus/ui/ChapterView.sass
+++ b/src/corpus/ui/ChapterView.sass
@@ -35,8 +35,8 @@
         &--is-beginning-of-section
             td
                 padding-top: 1em
-        
-        vertical-align: top
+
+                vertical-align: top
 
     &__toggle
         width: 1.5em
@@ -52,6 +52,9 @@
         font-size: 90%
         margin: 0.5em 2em 1em
         text-align: justify
+
+        .type-abbreviation
+            display: none
 
     &__parallels
         color: #808080
